<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tab_home">

    <fragment
        android:id="@+id/nav_tab_home"
        android:name="com.cbc.views.ui.fragments.HomeTabFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_tab_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.cbc.views.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.cbc.views.ui.profile.ProfileViewFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_view_fragment" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.cbc.views.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.cbc.views.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.cbc.views.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>